fix header wrapping and add images

--- a/assets/sass/overrides.scss
+++ b/assets/sass/overrides.scss
@@ -1,5 +1,14 @@
 html {
-  background-image: url('/images/lighthouse.jpg');
+  background-image: url('/images/piano-right.jpg'), url('/assets/css/images/overlay.png');
+  background-size: cover, cover;
+}
+
+#header header {
+  &.major p {
+    max-width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 ul, ol {
